# Agriwater

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/: crops_parameters.json
docs/: methodo_FAO.md  methodology.md  user_guide.md
src/: crop_database.py  evapotranspiration.py  irrigation_calculator.py  meteo_api.py  utils.py  visualizations.py
src/agriwater/: crop_database.py  evapotranspiration.py  exceptions.py  irrigation_calculator.py  main.py  meteo_api.py  utils.py  visualizations.py
src/agriwater/cli/: agronomic_report.py  interface.py
src/agriwater/data/: crops_parameters.json
tests/: test_agronomic_report.py  test_crop_database.py  test_evapotranspiration.py  test_exceptions.py  test_interface.py  test_irrigation_calculator.py  test_meteo_api.py  test_utils.py  test_visualizations.py  test_workflow.py
